tests/miniJava/neg/006787_mutation.MiniJava
class java this public static void Main ( String [ ] java ) { { } } }
